<resources>
    <string name="app_name">Wamboo</string>
    <string name="intro">Video is the type of data that we consume the most and the most complicated to process in electronic devices, leading to tons of CO2 emissions every year. </string>
	<string name="body">By using Wamboo, you can reduce the size of your videos up to 90%, to save memory not only in your phone, but also in the social media servers (big PCs that store our digital information) if you share them. This way, with smaller videos, you will reduce your carbon footprint. In addition, Wamboo is efficient because it minimizes the battery usage of the phone while compressing the videos and it shows the associated pollution when some battery is wasted. In traditional compression methods the phone’s resources are not used efficiently and the battery usage is maximized leading to pollution as the phone needs to be charged more often, consuming more electrical energy (with the associated costs of electricity for the users). </string>
    <string name="body2">This way, you\'ll also save money in storage (hard drives, the Cloud ...) and in electricity!</string>
    <string name="body4">If you\'re looking for a sustainable way to capture precious moments with photos and videos while taking care of our planet, Wamboo Cam is the solution you need! Wamboo Cam is much more than a conventional camera; it\'s your eco-friendly companion in the world of cinematography.</string>
    <string name="body5">Download the eco-camera, Wamboo Cam, completely free here.</string>
    <string name="end">We encourage you and everyone who use video to compress them using Wamboo before sharing them, specially if you think your video can be shared multiple times or go viral: we will avoid tons of CO2 emissions a year!</string>
    <string name="contact1">Comments or questions? What features would you like to see in the next version of Wamboo?</string>
    <string name="contact">Contact us: contact.harmonyvalley@gmail.com</string>
	<string name="select_video">Select Video</string>
    <string name="ultrafast">Ultrafast</string>
    <string name="good">Good</string>
    <string name="best">Best but slow</string>
    <string name="half">Reduce the size by half</string>
    <string name="custom_h">Custom (high quality: slower+less compression)</string>
    <string name="custom_l">Custom (low quality: faster+smaller)</string>
    <string name="ultrafast_description">"Fastest and smallest video, loosing some quality"</string>
    <string name="good_description">"Best quality vs. compression speed and size reduction"</string>
    <string name="best_description">"Best size reduction and quality but it's the slowest"</string>
    <string name="compress_video">Compress Video</string>
    <string name="share_compressed_video">Share Compressed Video</string>
    <string name="None">None</string>
    <string name="initial_size">Initial size = </string>
    <string name="compressed_size">Compressed size = </string>
    <string name="conversion_time">Conversion time = </string>
	<string name="initial_battery">Initial battery = </string>
    <string name="remaining_battery">Remaining battery = </string>
    <string name="co2">Associated pollution = </string>
    <string name="quality">Quality loss = </string>
    <string name="poor_quality">Bad quality or not possible to obtain; change compression parameters</string>
    <string name="reduction">Size reduction = </string>
    <string name="notification_title">Video Compression</string>
    <string name="notification_message">Compression in progress…</string>
    <string name="notification_message_success">Compression successfully completed.</string>
    <string name="notification_message_failure">Compression failed.</string>
    <string name="select_compression">Select Compress option</string>
	<string name="waiting">Please wait...</string>
    <string name="scroll">Scroll down and check the stats!</string>
    <string name="notification_background_title">Allow Background Compression!</string>
    <string name="notification_background_body">Tap "OK" and the settings will open; go to the "Battery" option and select "Unrestricted" so the compression keeps working even if you close the app (keep Wamboo opened to compress faster!!)</string>
    <string name="title_home">Eco-compressor</string>
    <string name="title_information">Information</string>
    <string name="title_history">History</string>
    <string name="selected_resolution">Selected resolution:</string>
    <string name="selected_fps">Selected FPS:</string>
    <string name="select_resolution">Select resolution</string>
    <string name="no_selected_resolution">No resolution selected</string>
    <string name="no_selected_speed">No speed selected</string>
    <string name="selected_speed">Selected speed:</string>
    <string name="select_speed">Select speed</string>
    <string name="no_selected_codec">No codec selected</string>
    <string name="selected_codec">Selected codec:</string>
    <string name="select_codec">Select codec</string>
    <string name="select_fps">Select FPS</string>
    <string name="speed1">ultrafast</string>
    <string name="speed2">superfast</string>
    <string name="speed3">very fast</string>
    <string name="speed4">faster</string>
    <string name="speed5">fast</string>
    <string name="speed6">medium</string>
    <string name="speed7">slow</string>
    <string name="speed8">slower</string>
    <string name="speed9">very slow</string>
    <string name="congrats"><b>AWESOME!!</b></string>
    <string name="audio">Remove audio</string>
    <string name="get_quality">Compute the quality difference (beta)</string>
    <string name="quality_completed">Quality computed successfully. Difference of:</string>
    <string name="quality_progress">Please, wait until the result pops up</string>
	<string name="reset">Reset</string>c
    <string name="select_dates">Select dates</string>
    <string name="delete_data">Delete data</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="daily_chart">Daily chart</string>
    <string name="final_chart">History</string>
    <string name="no_history">No History Available!</string>
    <string name="no_record">No Record Found!</string>
    <string name="delete_sucessful">Delete Successfully</string>
    <string name="select_init_date">Select Initial Date</string>
    <string name="select_final_date">Select End Date</string>
    <string name="date_messages">End Date must be more or equal than initial Date</string>
    <string name="title_pollution_chart">Associated Pollution (KgCO2)</string>
    <string name="title_size_chart">Achieved Size Reduction (%)</string>
    <string name="equivalences">Equivalent to drive: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="estimated_size">Target size after compression, smaller than:</string>
    <string name="compression">reduction (approx.)</string>
    <string name="compressed">compressed</string>
    <string name="background">Allow background compression</string>
    <string name="background2">Background compression already enabled!</string>
    <string name="noreduction">Bigger file because original was already compressed or had poor quality!</string>
    <string name="quality_error">Not possible to obtain the quality this time. Send an email to contact.harmonyvalley@gmail.com describing the issue, please!</string>
    <string name="delete_video">Delete non-compressed video</string>
    <string name="mail_error">There is an error with the email app</string>
    <string name="select_format">Select format</string>
    <string name="h265_3gp">Not possible to compress 3gp using H.265, changed to H.264</string>
    <string name="h265_avi">Not possible to compress avi using H.265, changed to H.264</string>
    <string name="no_selected_format">No resolution format</string>
    <string name="selected_format">Selected format:</string>
    <string name="error_config_notif">Error opening notification settings.</string>
    <string name="no_app_notif">No app found to handle notification settings.</string>
    <string name="error_settings">Error opening app settings.</string>
    <string name="no_app_settings">No app found to handle app settings.</string>
    <string name="manual_battery_config">Battery Setting not found in this device. Please manually go to setting and enable background task.</string>
    <string name="input_rate_check">The selected video file has unusual features: compression may fail</string>
    <string name="update_successful">Update completed successfully!</string>
    <string name="update_failed">Update failed. Please try again later.</string>
    <string name="no_hevc">H.265 (HEVC) is NOT supported on this device. Please, select H.264 </string>
    <string name="corrupted_video">Unusual feature</string>
    <string name="cancel_compression">Stop Compression</string>
    <string name="video_h265_warning">"The video was compressed using the codec H.265, which is not compatible with all devices. If you had issues with the compressed video, use the H.264 codec."</string>
    <string name="video_resolution_mismatch">"The video resolution is (%1$dpx), which is different that the selected one: (%2$dpx). This may cause issues with the video in some devices. If the compressed video can't be played, try different compression settings"</string>
 </resources>