<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical"
    tools:context="wamboo.example.videocompressor.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomImage"
        android:scrollbarThumbVertical="@color/red"
        android:fadeScrollbars="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pickVideo"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custum_button"
                android:fontFamily="@font/bauhausregular"
                android:text="@string/select_video"
                android:textColor="@color/white"
                android:textFontWeight="700" />
            <RadioButton
                android:id="@+id/rdOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:checked="false"
                android:fontFamily="@font/bauhausitalic"
                android:text="@string/background" />
            <!-- FrameLayout for VideoView -->
            <FrameLayout
                android:id="@+id/videoContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:contentDescription="video view"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/videoContainer2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <VideoView
                android:id="@+id/videoView1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:contentDescription="video view"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/videoContainer3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <VideoView
                android:id="@+id/videoView2"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:contentDescription="video view"/>
            </FrameLayout>

            <CheckBox android:id="@+id/checkbox_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                android:contentDescription="@string/audio"
                android:visibility="gone"/>


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="30sp"
                android:visibility="gone"/>

            <!--<TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_compression"
                android:textFontWeight="1000"
                android:textColor="@color/grey"
                android:visibility="gone"/>-->
            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="30sp"
                android:visibility="gone"/>
            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <Spinner
                android:id="@+id/spinner4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/compressVideo"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custum_button"
                android:fontFamily="@font/bauhausregular"
                android:text="@string/compress_video"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/dataTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/teal_700"
                android:textSize="15sp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/dataTV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/dataTV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:textColor="@color/teal_700"
                android:textSize="15sp"
                android:visibility="gone"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/shareVideo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custum_button"
                android:fontFamily="@font/bauhausregular"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/share_compressed_video"
                android:textColor="@color/white"
                android:visibility="gone" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteVideo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custum_button"
                android:fontFamily="@font/bauhausregular"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/delete_video"
                android:textColor="@color/white"
                android:visibility="gone" />
            <LinearLayout
                android:id="@+id/statsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/initial_size"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/initialSizeTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textFontWeight="300"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/compressed_size"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/compressedSizeTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textFontWeight="300"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/conversion_time"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/conversionTimeTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textFontWeight="300"
                        android:textSize="15sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/initial_battery"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/initialBatteryTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textFontWeight="300"
                        android:textSize="15sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/remaining_battery"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/remainingBatteryTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textFontWeight="300"
                        android:textSize="15sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/reduction"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reduction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textFontWeight="300"
                        android:textSize="15sp" />

                </LinearLayout>
                <CheckBox android:id="@+id/checkboxQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_quality"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/qualityDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/quality"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/quality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textFontWeight="300"
                        android:textSize="15sp"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/co2"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/co2TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textFontWeight="300"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reset"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custum_button"
                android:fontFamily="@font/bauhausregular"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:visibility="gone" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6983852485981992/4550519876" />
        </LinearLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/bottomImage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:importantForAccessibility="no"
        android:src="@drawable/logo" />

</RelativeLayout>